add vision shaders and refactor related classes